--- a/index.html
+++ b/index.html
@@ -5,10 +5,43 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
-    <title>Document</title>
+    <title>Custom Umbrella - Upload Your Logo and Preview Instantly</title>
 </head>
 <body>
-    <h1>Hello there</h1>
+    <div id="container">
+        <div id="umbrella-container">
+          <div class="umbrella-image">
+            <img class="umbrella-preview" src="" />
+            <div class="for-logo">
+              <img class="logo-here" src="" width="100%" />
+            </div>
+          </div>
+        </div>
+        <div id="text-container">
+          <h1 class="title">Custom Umbrella</h1>
+          <div class="color-selector">
+            <span class="color-btn blue_color"></span>
+            <span class="color-btn pink_color"></span>
+            <span class="color-btn yellow_color"></span>
+          </div>
+          <div class="file-upload-box">
+            <h2>Customize your umbrella</h2>
+            <h3>
+                Upload a logo for an instant preview.
+            </h3>
+            <p>
+                .png and .jpg files only. Max file size is 5MB.
+            </p>
+            <div class="file-input">
+                    <label for="upload-logo">
+                    <img id="change-color" src="" />
+                    <div class="upload-btn">Upload Logo</div>
+                </label>
+                <input class="upload-logo" id="upload-logo" type="file" accept="*" />
+            </div>
+          </div>
+        </div>
+      </div>
     <script src="./index.js"></script>
 </body>
 </html>
